<resources>
    <string name="app_name">Internationalization</string>
    <string name="home_index">Home Index</string>
    <string name="system_language">Current system language: %s</string>
    <string name="user_select_language">Current user selects language: %s</string>
    <string name="multi_language">Multi Language</string>
    <string name="start_service">Start Service</string>
    <string name="start_intent_service">Start IntentService</string>
    <string name="show_dialog">Show Dialog</string>
    <string name="setting">Setting</string>
    <string name="test_text">When you are sending messages with specific delivery options, use platform-specific fields to set them. You can specify different values per platform if you want. However, even when you want to set essentially the same value across platforms, you must use platform-specific fields. This is because each platform may interpret the value slightly differently—for example, time-to-live is set on Android as an expiration time in seconds, while on iOS it is set as an expiration date.</string>
    <string name="Chinese_simple">中文简体</string>
    <string name="Chinese_traditional">中文繁體</string>
    <string name="English">English</string>
    <string name="finish">Finish</string>
    <string name="service_create">created service</string>
    <string name="intent_service_create">created IntentService</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="set_text_by_code">set text by code</string>
</resources>
