<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Chinese_simple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chinese_simple"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Chinese_traditional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chinese_traditional"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_English"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/English"
        android:textAllCaps="false" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textAllCaps="false" />

</LinearLayout>